<resources>
    <string name="app_name">UIMSTest</string>
    <string name="text_login_id">教学号</string>
    <string name="text_login_password">教务密码</string>
    <string name="text_login_verify_code">验证码</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="use_student_vpn_login">使用学生VPN登录 ></string>
    <string name="use_student_vpn">使用学生VPN</string>
    <string name="text_login_button">登录</string>
    <string name="title_activity_test_button_navigation">TestButtonNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="back">返回</string>
    <string name="sure">确定</string>

    <!--NewMainActivity-->
    <string name="no_information">暂无课程信息\n请点击"更新信息"登录并刷新本地数据.</string>
    <string name="no_course">今天没课呀~</string>

    <!--Function-->
    <string name="school_news">校内通知</string>
    <string name="school_score">成绩查询</string>
    <string name="school_course_exam">课程与考试</string>
    <string name="school_course_time_change">课程时间调整</string>
    <string name="school_course_weekly">课程表</string>
    <string name="setting">设置</string>

    <!--设置邮箱弹窗-->
    <string name="information_title">提示</string>
    <string name="email_introduce">为方便后续与您联系，请提供您的邮箱。</string>
    <string name="email_hint">请输入您的邮箱</string>
    <string name="email_divider">\@</string>
    <string name="email_part_2_hint">qq.com</string>
    <string name="email_edit_MIUI_info">检测到您可能正在使用小米手机(MIUI)</string>

    <!--课程详情弹窗-->
    <string name="edit_course_introduce">Tips: 点击上方时间段进行编辑.</string>

    <!--Tab-->
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">All Function</string>
    <string name="tab_text_4">成绩</string>

    <!--课程编辑-->
    <string name="week_img_desc">上课周数</string>
    <string name="time_img_desc">上课时间</string>
    <string name="teacher_img_desc">教师</string>
    <string name="place_img_desc">上课地点</string>

    <!--MainActivity-->
    <string name="close">关 闭</string>

    <!--设置-->
    <string name="course_buxiu">必修课</string>
    <string name="course_xuanxiu">选修课</string>
    <string name="course_xianxuan">限选课</string>
    <string name="course_PE">体育课</string>
    <string name="course_xiaoxuanxiu">校选修(公选)课</string>
    <string name="course_chongxiu">重修</string>
    <string name="setting_test_function_introduction">这里的设置因人而异，也许开启它能提升你的使用体验，但也有可能会影响你使用一些功能。\n你可以根据自己的喜好，开启这里的功能。\n这里的设置会默认关闭。</string>

    <!--主题设置-->
    <string name="activity_color_config_custom_img_title">背景设置</string>
    <string name="activity_color_config_custom_img_delete">删除自定义背景</string>
    <string name="activity_color_config_custom_img_select">选择自定义背景图</string>
    <string name="activity_color_config_custom_img_tips">Tips: 选择较为简单的图片，可以获得较好的效果哦~</string>

    <string name="activity_color_config_custom_theme_title">主题设置</string>
    <string name="activity_color_config_custom_theme_text_blue">蓝色</string>
    <string name="activity_color_config_custom_theme_text_pink">粉色</string>
    <string name="activity_color_config_custom_theme_text_green">绿色</string>

</resources>
