<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:padding="10dp">

        <Button
            android:id="@+id/news_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_local_background"
            android:transitionName="NewsActivity"
            android:text="@string/school_news"
            android:textSize="15sp"
            android:textColor="@color/color_white"/>

        <Button
            android:id="@+id/score_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_local_background"
            android:text="@string/school_score"
            android:textSize="15sp"
            android:textColor="@color/color_white"/>

        <Button
            android:id="@+id/course_and_exam_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_local_background"
            android:text="@string/school_course_exam"
            android:textSize="15sp"
            android:textColor="@color/color_white"/>

        <Button
            android:id="@+id/course_time_change_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_local_background"
            android:text="@string/school_course_time_change"
            android:textSize="15sp"
            android:textColor="@color/color_white"/>

        <Button
            android:id="@+id/course_weekly_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_local_background"
            android:text="@string/school_course_weekly"
            android:textSize="15sp"
            android:textColor="@color/color_white"/>

        <Button
            android:id="@+id/setting_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_local_background"
            android:text="@string/setting"
            android:textSize="15sp"
            android:textColor="@color/color_white"/>

    </LinearLayout>

</ScrollView>