<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal|bottom"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pop_window_login_get_score_pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_login"
        >

        <TextView
            android:id="@+id/pop_window_login_get_score_pop_layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="更新信息"
            android:textSize="17sp"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:textColor="@color/app_white"
            />

        <LinearLayout
            android:id="@+id/pop_window_login_get_score_pop_layout_main_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/pop_window_login_get_score_id"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@drawable/login_edit_text_background"
                android:windowSoftInputMode="stateHidden"
                android:hint="@string/text_login_id"/>

            <EditText
                android:id="@+id/pop_window_login_get_score_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:background="@drawable/login_edit_text_background"
                android:windowSoftInputMode="stateHidden"
                android:hint="@string/text_login_password"/>

            <LinearLayout
                android:id="@+id/pop_window_login_verify_code_layout"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:gravity="center"
                android:background="@drawable/login_edit_text_background"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/pop_window_login_verify_code_iv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_autorenew_white_24dp"/>

                <EditText
                    android:id="@+id/pop_window_login_verify_code_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:hint="@string/text_login_verify_code"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            >

            <LinearLayout
                android:id="@+id/pop_window_login_get_score_config_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="#00000000">

                <CheckBox
                    android:id="@+id/pop_window_login_get_score_UIMS_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UIMS(校内)"
                    />

                <TextView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/pop_window_login_get_score_CJCX_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CJCX(校外)"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/pop_window_login_get_score_use_vpn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/use_student_vpn_login"/>

            <LinearLayout
                android:id="@+id/pop_window_login_get_score_VPN_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:background="#00000000"
                android:visibility="gone"
                tools:visibility="visible">

                <CheckBox
                    android:id="@+id/pop_window_login_get_score_VPN_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_student_vpn"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/pop_window_login_get_score_commit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_internet_background"
                android:layout_margin="10dp"
                android:text="登录并更新信息"
                />

            <Button
                android:id="@+id/pop_window_login_get_score_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_with_white_background"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:text="取消"
                />

            <TextView
                android:id="@+id/pop_window_login_get_score_delete_saved_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="删除账号信息"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>